# fendoz-Nocturne-player

./: .gitignore  .mcp.json  <sqlite3.Connection object at 0x7fedcc95bf10>  CLAUDE.md  README.md  main.py  nocturne.spec  pyproject.toml  test_tray.py
.claude/: settings.json
.claude/graphify/: mcp_server.py
.github/workflows/: ci.yml
arch-linux-installer/: PKGBUILD
nocturne/: __init__.py  __main__.py
nocturne/common/: __init__.py  signal_bus.py  style_sheet.py
nocturne/config/: __init__.py  config.py
nocturne/core/: __init__.py  audio_worker.py  base_player_engine.py  equalizer.py  lyrics_sync.py  pcm_capture.py  player_engine.py  qt_player_engine.py
nocturne/data/: __init__.py  db.py  library_scanner.py  models.py  playlist_manager.py  relocate.py  scan_worker.py
nocturne/integrations/: __init__.py
nocturne/integrations/lyrics/: __init__.py  lyrics_online.py
nocturne/integrations/soundcloud/: __init__.py  resolver.py
nocturne/ui/: __init__.py  common.py  icon_utils.py  main_window.py
nocturne/ui/components/: __init__.py  link_card.py  lyrics_panel.py  miniplayer.py  online_badge.py  player_bar.py  ring_visualizer.py  sample_card.py  scan_progress_overlay.py  soundcloud_dialog.py  stage_widget.py  tag_editor.py  top_bar.py
nocturne/utils/: __init__.py  crash_handler.py
resource/styles/: base.qss
tests/: conftest.py  test_base_player_engine.py  test_db.py  test_equalizer.py  test_icon_utils.py  test_lyrics_online.py  test_lyrics_sync.py  test_models.py  test_pcm_capture.py  test_playlist_manager.py  test_relocate.py
(+25 files in other folders)
