[project]
name = "nocturne"
version = "1.3.0"
description = "Nocturne — premium offline-first desktop music player"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "colorthief>=0.2.1",
  "darkdetect>=0.8.0",
  "httpx>=0.28",
  "mutagen>=1.47",
  "numpy>=2.0",
  "pillow>=12.3.0",
  "pyside6>=6.4.2",
  "pyside6-fluent-widgets[full]>=1.11.2",
  "pysidesix-frameless-window>=0.8.0",
  "python-vlc>=3.0",
  "ruff>=0.15.20",
  "scipy>=1.18.0",
  "sounddevice>=0.5.1",
]

[tool.setuptools.packages.find]
include = ["nocturne", "nocturne.*"]

[dependency-groups]
dev = [
    "pyside6-mcp",
]
test = ["pytest>=8", "pytest-cov>=7.1.0", "pytest-qt>=4"]

[tool.uv.sources]
pyside6-mcp = { git = "https://github.com/com55/pyside6-mcp" }
